# TstCar

./: Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  dump.rdb  pyproject.toml  pytest.ini
crypto/: consumers.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
crypto/migrations/: 0001_initial.py
crypto_app/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
